# shared-models

./: .dockerignore  .env.backup.example  .env.example  .env.remote.example  .gitignore  BACKUP_GUIDE.md  CATEGORIES_IMPLEMENTATION.md  CHANGELOG.md  Dockerfile  Dockerfile.alternative  Dockerfile.migration  Dockerfile.prod  EXAMPLES.md  GITHUB_ACTIONS_SETUP.md  LICENSE  MANIFEST.in  MENTOR_MENTEE_SCHEMA.md  MIGRATIONS copy.md  MIGRATIONS.md  Makefile  QUICKSTART.md  QUICK_SETUP.md  README.md  RELATIONSHIPS.md  RELATIONSHIP_FIX_GUIDE.md  REMOTE_DB.md  USAGE.md  alembic.ini  alembic.remote.ini  build.sh  docker-compose.migration.yml  docker-compose.yml  pyproject.toml  setup.py  test_categories.py  test_db.py  test_package.py  test_relationships.py  test_schemas.py  test_task_model.py
.github/: RELEASE.md
.github/workflows/: auto-tag.yml  release.yml  test.yml
alembic/: env.py
alembic/versions/: 2025_07_28_1102-0202da9200ed_initial_migration_create_all_tables.py  2025_07_28_1333-e7246a33b780_edit_usermessages_table.py  2025_07_30_2035-3d4ef75fee1e_initial_migration_create_all_tables_.py  2025_08_04_1223-3ca9d72fe2ba_add_categories_and_subcategories_for_.py  2025_08_05_1130-04729a470680_create_users_profile.py  (+25 more)
docker/: init-migrations.sh  init-pgvector.sql
scripts/: README.md  backup-remote-db.sh  build-docker.sh  check-migration-status.sh  create-release.sh  deploy-remote-db.sh  entrypoint.sh
shared_models/: __init__.py  database.py  documents_models.py  mentor_models.py  models.py  payment_models.py  quiz_model.py  rag_models.py  schemas.py  tutor_models.py
(+2 files in other folders)
